# AtlasVeil-VPN

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  SECURITY.md
data/: io.github.rotciv004.atlasveil.desktop
qml/: Main.qml
src/: main.cpp
src/core/: IVpnBackend.h  IVpnBackend.hpp  VpnController.cpp  VpnController.hpp  VpnProfile.h  VpnProfile.hpp  VpnState.h  VpnState.hpp
src/network/: NetworkManagerAdapter.cpp  NetworkManagerAdapter.hpp
tests/: CMakeLists.txt
tests/fakes/: FakeVpnBackend.hpp
tests/integration/: README.md
tests/unit/: tst_vpncontroller.cpp
